Fix popup notification defer counter on removal by touch

As MessagePopupCollection did not consider notification removal by touch
sliding, |user_is_closing_toasts_by_clicking_| is activated by touch and
never deactivated, as the deactivation is done in OnMouseExited.

TEST=manual
BUG=805208

Change-Id: Icecf96d66bbc6cc02346052cc9886251b0286017