ui/message_center/views/message_view.h
@@ -98,6 +98,8 @@ class MESSAGE_CENTER_EXPORT MessageView
     return manually_expanded_or_collapsed_;
   }
 
+  bool removed_by_slide() const { return removed_by_slide_; }
+
  protected:
   // Creates and add close button to view hierarchy when necessary. Derived
   // classes should call this after its view hierarchy is populated to ensure
@@ -128,6 +130,9 @@ class MESSAGE_CENTER_EXPORT MessageView
   // True if the notification is expanded/collapsed by user interaction.
   // If true, MessagePopupCollection will not auto-collapse the notification.
   bool manually_expanded_or_collapsed_ = false;
+
+  // True if the notification is removed by OnSlideOut().
+  bool removed_by_slide_ = false;
 
   std::unique_ptr<views::Painter> focus_painter_;
 
